// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual should render table of contents in a step as well: toc-render-step 1`] = `
"# Step 3: dummy

[//]: # (head-end)


Step 3 manual
- [Step 1: dummy](.tortilla/manuals/views/step1.md)
- [Step 2: dummy](.tortilla/manuals/views/step2.md)
- [Step 3: dummy](.tortilla/manuals/views/step3.md)



[//]: # (foot-start)

[{]: <helper> (navStep)

| [< Previous Step](step2.md) |
|:----------------------|

[}]: #"
`;

exports[`Manual should render table of contents: toc-render 1`] = `
"# Test tortilla project

[//]: # (head-end)


A newly created Tortilla project. For more information, see https://github.com/Urigo/tortilla.
- [Step 1: dummy](.tortilla/manuals/views/step1.md)
- [Step 2: dummy](.tortilla/manuals/views/step2.md)
- [Step 3: dummy](.tortilla/manuals/views/step3.md)
- [Step 4: Add Comments](.tortilla/manuals/views/step4.md)



[//]: # (foot-start)

[{]: <helper> (navStep)

| [Begin Tutorial >](.tortilla/manuals/views/step1.md) |
|----------------------:|

[}]: #"
`;
